--- a/Sources/BunnyLiveStream/Resources/Localization/de.lproj/LiveStream.strings
+++ b/Sources/BunnyLiveStream/Resources/Localization/de.lproj/LiveStream.strings
@@ -9,4 +9,4 @@
 "end_stream_alert_confirm_action" = "Stream beenden";
 "indicator_live" = "LIVE";
 "indicator_offline" = "OFFLINE";
-"indicator_retrying" = "WIEDERHOLEN";
+"audio_error" = "Beim Einrichten des Audios ist ein Problem aufgetreten. Bitte überprüfen Sie Ihre Einstellungen und versuchen Sie es erneut.";
