--- a/Sources/BunnyLiveStream/Resources/Localization/en.lproj/LiveStream.strings
+++ b/Sources/BunnyLiveStream/Resources/Localization/en.lproj/LiveStream.strings
@@ -9,4 +9,4 @@
 "end_stream_alert_confirm_action" = "End Stream";
 "indicator_live" = "LIVE";
 "indicator_offline" = "OFFLINE";
-"indicator_retrying" = "RETRYING";
+"audio_error" = "There was a problem setting up the audio. Please check your settings and try again.";
