--- a/Sources/BunnyVideoPlayer/Resources/Localization/en.lproj/Settings.strings
+++ b/Sources/BunnyVideoPlayer/Resources/Localization/en.lproj/Settings.strings
@@ -3,6 +3,7 @@
 
 "caption_menu_title" = "Captions";
 "caption_disabled" = "Disabled";
+"audio_track_menu_title" = "Audio Track";
 "playback_speed_menu_title" = "Speed";
 "playback_speed_normal" = "Normal";
 "quality_menu_title" = "Quality";
