--- a/Example-App/Example-App/Resources/Localizable.xcstrings
+++ b/Example-App/Example-App/Resources/Localizable.xcstrings
@@ -14,6 +14,9 @@
     "%lld views" : {
 
     },
+    "Actions" : {
+
+    },
     "BunnyStream Configuration" : {
 
     },
@@ -24,6 +27,9 @@
 
     },
     "Cancel" : {
+
+    },
+    "Configuration" : {
 
     },
     "Direct Video Play" : {
